
* Fix in autotools build where coda executables were incorrectly linking to
  shared coda library if --disable-static was provided to configure script.

2.17.2 2016-09-02
~~~~~~~~~~~~~~~~~

* Fix compatibility issue with different flex versions for autotools build.

2.17.1 2016-08-25
~~~~~~~~~~~~~~~~~

* The open_as() function can now force a file using a self-describing format
  (e.g. HDF5, XML, etc.) to be opened as a raw binary/ascii file if the
  product definition is binary/ascii.

* Fixed open file handle counting leak in IDL interface when coda_open()
  failed.

* Fixed enabling of HDF4/HDF5 in CMake build on Windows.

* Allow xml attributes with a namespace in xml products to be defined
  in a codadef by a definition of an attribute without a namespace
  (as was already possible for xml elements).

* Fixed wrong types for fixed surface fields in format mapping
  documentation for GRIB format.

2.17 2016-06-27
~~~~~~~~~~~~~~~

* CMake build system can now be used on Windows.
  It currently only supports building of the C library,
  command line tools and Python interface.

* Updated embedded PCRE library to version 8.38.

* Updated embedded expat library to version 2.1.1.

* Updated embedded zlib library to version 1.2.8.

2.16 2016-03-24
~~~~~~~~~~~~~~~

* Automatic detection of product class/type/version is now performed
  using CODA expressions and is now possible for all data formats.
  All existing detection rules in codadefs are automatically translated
  to the new CODA expression variants when the codadefs are read.
  codadefs that tried to map hdf4, hdf5, cdf, netcdf, grib1, grib2, rinex,
  or sp3 files to ascii/binary to allow automatic product type/version
  detection will have to be updated to now perform the detection using
  the actual format of the product.

* Product definitions in codadefs may now omit a root type definition if
  the product is not an 'ascii' or 'binary' product. The root type will