@@ -2,6 +2,9 @@
 * Fix in autotools build where coda executables were incorrectly linking to
   shared coda library if --disable-static was provided to configure script.
 
+* Fix issue where in a specific case (definition had no attributes and xml
+  element had a namespace) no error was raised for and unallowed xml attribute.
+
 2.17.2 2016-09-02
 ~~~~~~~~~~~~~~~~~
 
